--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,19 @@
 {
+    "name": "Babryz Cars",
+    "description": "Manages a car rental system",
+    "authors": [
+        {
+            "name": "Emil Babra",
+            "email": "emil.babra@chasacademy.se"
+        }
+    ],
+
     "require": {
         "twig/twig": "^2.0"
     },
     "autoload": {
         "psr-4": {
-            "main\\": ""
+            "main\\": "src"
         }
     }
 }
